Testing with annotatations and using embedded H2 BD

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+		<!-- Support for H2 in memory database -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
     </dependencies>
 
 	<build>
