TestContainer Example with MariaDB.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.application.name=demoJava
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Turn off the Spring Boot Banner
+spring.main.banner-mode=off
 
