Enable H2 embedded BD using Hikari connection Pool / DataSource and executing scripts.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.main.banner-mode=off
 
 # Debug log
 logging.level.org.springframework.web= DEBUG
+
+# H2 configuration
+# Enable H2 console
+spring.h2.console.enabled=true
+
+# Path for the H2 console
+spring.h2.console.path=/h2-console
