Experimenting Transaction and Embedded DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,15 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.main.banner-mode=off
 
 # Debug log
-logging.level.org.springframework.web= DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 
 # H2 configuration
 # Enable H2 console
-spring.h2.console.enabled=true
+# spring.h2.console.enabled=true
 
 # Path for the H2 console
-spring.h2.console.path=/h2-console
+# spring.h2.console.path=/h2-console
+
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
+logging.level.org.springframework.jdbc.datasource.init.ResourceDatabasePopulator=DEBUG
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
