--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demoJava
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 
 # Turn off the Spring Boot Banner
 spring.main.banner-mode=off
@@ -9,13 +9,20 @@ spring.main.banner-mode=off
 # Debug log
 #logging.level.org.hibernate.SQL=DEBUG
 
-# H2 configuration
+################# H2 configuration
 # Enable H2 console
-# spring.h2.console.enabled=true
-
+#spring.h2.console.enabled=true
 # Path for the H2 console
-# spring.h2.console.path=/h2-console
+#spring.h2.console.path=/h2-console
 
-logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
-logging.level.org.springframework.jdbc.datasource.init.ResourceDatabasePopulator=DEBUG
-logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.root=WARN
+#logging.level.com.example.DBExample.Start=INFO
+
+logging.level.org.springframework.transaction=TRACE
+#logging.level.org.springframework.orm.jpa=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=TRACE
+#logging.level.org.springframework.transaction.interceptor.TransactionInterceptor=TRACE
+
+#logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
+#logging.level.org.springframework.jdbc.datasource.init.ResourceDatabasePopulator=DEBUG
+#logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
